content/development/sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

12-23-2015 15:39:
D:\Websites\Personal\codymoore\_development\.sublime-gulp-tmp.js:46
  Watch html and js files and change only the one that changes
        ^^^^

SyntaxError: Unexpected identifier
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:404:25)
    at Object.Module._extensions..js (module.js:432:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:313:12)
    at Module.require (module.js:366:17)
    at require (module.js:385:17)
    at requireGulp (C:\Users\Cody\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\Cody\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:425:26)


12-23-2015 15:39:
D:\Websites\Personal\codymoore\_development\.sublime-gulp-tmp.js:46
  Watch html and js files and change only the one that changes
        ^^^^

SyntaxError: Unexpected identifier
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:404:25)
    at Object.Module._extensions..js (module.js:432:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:313:12)
    at Module.require (module.js:366:17)
    at require (module.js:385:17)
    at requireGulp (C:\Users\Cody\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\Cody\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:425:26)


12-23-2015 15:40:
D:\Websites\Personal\codymoore\_development\.sublime-gulp-tmp.js:46
  Watch html and js files and change only the one that changes
        ^^^^

SyntaxError: Unexpected identifier
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:404:25)
    at Object.Module._extensions..js (module.js:432:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:313:12)
    at Module.require (module.js:366:17)
    at require (module.js:385:17)
    at requireGulp (C:\Users\Cody\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\Cody\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:425:26)


12-23-2015 16:14:
D:\Websites\Personal\codymoore\_development\.sublime-gulp-tmp.js:46
  Watch html and js files and change only the one that changes
        ^^^^

SyntaxError: Unexpected identifier
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:404:25)
    at Object.Module._extensions..js (module.js:432:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:313:12)
    at Module.require (module.js:366:17)
    at require (module.js:385:17)
    at requireGulp (C:\Users\Cody\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\Cody\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:425:26)
